--- a/index.html
+++ b/index.html
@@ -13,19 +13,23 @@
     </header>
     <!-- TODO: add class attribute  -->
     <section>
-      <h2 class="title">Your Name</h2>
+      <h2 class="title">Marcel Graham</h2>
       <!-- TODO: modify img attributes -->
-      <img src="https://via.placeholder.com/200" alt="Your Name" />
-      <p>Write a short paragraph or two about yourself</p>
+      <img src="https://via.placeholder.com/200" alt="Marcel Graham" />
+      <p>Hello everyone, my name is Marcel Graham.</p> 
+      <p>I've been a electrical technician going on 7 years.
+      <p>I like to watch Ultimate Fighting Championship and NFL on the weekends. 
+      <p>I have two sons that keep me very busy as well.</p> 
+      </p>
     </section>
     <!-- TODO: add class attribute -->
     <section>
       <h2 class="title">Contact Info</h2>
       <ul>
         <!-- TODO: add id attribute -->
-        <li><strong>Email:</strong> <a href="#">someplace@gmail.com</a></li>
+        <li><strong>Email:</strong> <a href="#">marcelgraham@gmail.com</a></li>
         <!-- TODO: add id attribute -->
-        <li><strong>Github:</strong> <a href="#">sampleName</a></li>
+        <li><strong>Github:</strong> <a href="#">Drizzt1786</a></li>
         <!-- TODO: add id attribute -->
         <li><strong>Portfolio:</strong> <a href="#">coming soon</a></li>
       </ul>
