--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en-us">
+<html lang="en-US">
   
   <head>
-    <meta charset="UTF-8">
+    <meta charset="UTF-8"/>
     <title>Student Bio with Attributes</title>
-    <link rel="stylesheets" href="./assets/style.css">
+    <link rel="stylesheet" href="./assets/css/style.css"/>
   </head>
     
     <body>
@@ -31,7 +31,7 @@
             <li id="github"><strong>GitHub:</strong>
                 <a href="#">Drizzt1786</a>
             </li>
-            <li id="portfolio"><stong>Portfolio</stong>
+            <li id="portfolio"><strong>Portfolio</strong>
                 <a href="#">coming soon!</a>
             </li>  
            </ul>
